--- a/app/src/main/res/layout/activity_follow_tour.xml
+++ b/app/src/main/res/layout/activity_follow_tour.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:animateLayoutChanges="true">
+    android:background="@color/white"
+    android:animateLayoutChanges="true"
+    android:clickable="true"
+    android:focusable="true">
 
     <fragment
         android:id="@+id/map_follow_tour"
