--- a/app/src/main/res/layout/dialog_update_password.xml
+++ b/app/src/main/res/layout/dialog_update_password.xml
@@ -39,7 +39,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/roundedborder2"
-                android:padding="15dp" />
+                android:padding="15dp"
+                android:inputType="textPassword"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -55,14 +56,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/roundedborder2"
-                android:padding="15dp" />
+                android:padding="15dp"
+                android:inputType="textPassword"/>
 
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:text="Xác nhận mật khẩu mới (*):" />
+                android:text="Xác nhận mật khẩu mới (*):"
+                />
 
             <EditText
                 android:id="@+id/updatepass_confirmpass"
@@ -70,7 +73,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/roundedborder2"
-                android:padding="15dp" />
+                android:padding="15dp"
+                android:inputType="textPassword"/>
 
 
             <Button
@@ -82,7 +86,8 @@
                 android:background="@drawable/login_btn_bg"
                 android:padding="15dp"
                 android:text="Cập nhật"
-                android:textAllCaps="false"
+                android:textAllCaps="true"
+                android:textStyle="bold"
                 android:textColor="#ffffff"
                 android:textSize="18sp" />
 
