--- a/app/src/main/res/layout/header_for_list_view_stop_point_tour_info.xml
+++ b/app/src/main/res/layout/header_for_list_view_stop_point_tour_info.xml
@@ -1,24 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#fff"
-    android:orientation="vertical"
-    android:paddingLeft="20dp"
-    android:paddingTop="10dp"
-    android:paddingRight="20dp"
-    android:paddingBottom="10dp"
-    android:descendantFocusability="blocksDescendants">
-
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/list_view_tour_iem_bg"
+        android:layout_height="wrap_content"
+        android:background="#fff"
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/listusertrip_item_img_avatar"
+            android:id="@+id/img_avatar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -28,24 +20,23 @@
             android:src="@drawable/empty_image" />
 
         <LinearLayout
-            android:weightSum="2"
-            android:paddingLeft="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingLeft="15dp"
+            android:weightSum="2">
 
             <LinearLayout
-                android:layout_weight="2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="2"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:orientation="horizontal"
-                    >
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:layout_width="25dp"
@@ -53,14 +44,14 @@
                         app:srcCompat="@drawable/ic_maps_and_flags" />
 
                     <TextView
-                        android:textStyle="bold"
-                        android:id="@+id/listusertrip_item_tv_tourName"
+                        android:id="@+id/tv_tourName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingLeft="10dp"
                         android:paddingTop="3dp"
                         android:text="Tour Name"
-                        android:textSize="20sp" />
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
 
@@ -76,7 +67,7 @@
                         app:srcCompat="@drawable/ic_multiple_users_silhouette" />
 
                     <TextView
-                        android:id="@+id/listusertrip_item_tv_adults"
+                        android:id="@+id/tv_adults"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingLeft="10dp"
@@ -89,11 +80,11 @@
                         android:layout_height="wrap_content"
                         android:paddingLeft="10dp"
                         android:paddingTop="4dp"
-                        android:text = "&amp;"
+                        android:text="&amp;"
                         android:textSize="15sp" />
 
                     <TextView
-                        android:id="@+id/listusertrip_item_tv_childs"
+                        android:id="@+id/tv_childs"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingLeft="10dp"
@@ -105,22 +96,18 @@
             </LinearLayout>
 
             <ImageButton
-                android:id="@+id/btn_edit_user_tour"
+                android:id="@+id/btn_clone_tour"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:background="#fff"
-                android:paddingTop="10dp"
                 android:paddingLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:paddingTop="10dp"
                 android:scaleType="fitXY"
-                app:srcCompat="@drawable/ic_edit_regular"
-                android:focusable="false"
-                android:focusableInTouchMode="false"/>
+                app:srcCompat="@drawable/ic_clone_regular" />
 
         </LinearLayout>
-
-
 
 
         <LinearLayout
@@ -136,15 +123,15 @@
                 app:srcCompat="@drawable/ic_money_bag" />
 
             <TextView
-                android:textStyle="bold"
-                android:textColor="#8BC34A"
-                android:id="@+id/listusertrip_item_tv_minCost"
+                android:id="@+id/tv_minCost"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingTop="4dp"
                 android:text="Min Cost"
-                android:textSize="15sp" />
+                android:textColor="#8BC34A"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -157,15 +144,15 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:textStyle="bold"
-                android:textColor="#8BC34A"
-                android:id="@+id/listusertrip_item_tv_maxCost"
+                android:id="@+id/tv_maxCost"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingTop="4dp"
                 android:text="Max Cost"
-                android:textSize="15sp" />
+                android:textColor="#8BC34A"
+                android:textSize="15sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
@@ -181,39 +168,38 @@
                 app:srcCompat="@drawable/ic_calendar" />
 
             <TextView
-                android:textStyle="italic"
-                android:id="@+id/listusertrip_item_tv_startDate"
+                android:id="@+id/tv_startDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingTop="4dp"
                 android:text="Start Date"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:textStyle="italic" />
 
             <TextView
-                android:textStyle="italic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingTop="4dp"
                 android:text="-"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:textStyle="italic" />
 
             <TextView
-                android:textStyle="italic"
-                android:id="@+id/listusertrip_item_tv_endDate"
+                android:id="@+id/tv_endDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingTop="4dp"
                 android:text="End Date"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:textStyle="italic" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="15dp"
-            android:layout_marginBottom="10dp">
+            android:paddingLeft="15dp">
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
@@ -225,11 +211,77 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
+                android:text="Đang mở"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 android:textColor="#FF7067"/>
         </LinearLayout>
 
+        <Button
+            android:id="@+id/btn_to_map"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_accept_bg"
+            android:text="Bắt đầu"
+            android:textSize="18sp"
+            android:textColor="@color/colorCustomPrimary"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
+            android:layout_marginBottom="10dp"
+            />
+
     </LinearLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:background="#4CAF50"
+        >
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:padding="10dp"
+            >
+
+            <ImageView
+                android:id="@+id/list_icon"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                app:srcCompat="@drawable/ic_format_list_bulleted_black_24dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:text="Danh sách điểm dừng"
+                android:textColor="#ffffff"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_margin="5dp"
+            android:background="@drawable/circle_bg_btn"
+            android:layout_centerVertical="true"
+            android:orientation="horizontal"
+            android:layout_alignParentEnd="true">
+
+            <ImageView
+                android:id="@+id/btn_edit_stop_points"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_margin="5dp"
+                app:srcCompat="@drawable/ic_edit_location_black_24dp" />
+        </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
