--- a/app/src/main/res/layout/activity_follow_tour.xml
+++ b/app/src/main/res/layout/activity_follow_tour.xml
@@ -29,8 +29,8 @@
                 android:id="@+id/show_warning_notification"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                app:srcCompat="@drawable/ic_warning_black_24dp"
-                android:layout_margin="10dp"
+                app:srcCompat="@drawable/ic_report_black_24dp"
+                android:layout_margin="5dp"
                 />
         </LinearLayout>
         <LinearLayout
@@ -43,7 +43,20 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 app:srcCompat="@drawable/ic_chat_black_24dp"
-                android:layout_margin="10dp"
+                android:layout_margin="5dp"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/circle_bg_btn">
+            <ImageView
+                android:id="@+id/show_record_list"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                app:srcCompat="@drawable/ic_mic_black_24dp"
+                android:layout_margin="5dp"
                 />
         </LinearLayout>
     </LinearLayout>
