--- a/app/src/main/res/layout/dialog_update_info_user.xml
+++ b/app/src/main/res/layout/dialog_update_info_user.xml
@@ -130,7 +130,8 @@
                 android:background="@drawable/login_btn_bg"
                 android:padding="15dp"
                 android:text="Cập nhật"
-                android:textAllCaps="false"
+                android:textAllCaps="true"
+                android:textStyle="bold"
                 android:textColor="#ffffff"
                 android:textSize="18sp" />
 
