--- a/app/src/main/res/layout/header_for_list_view_stop_point_tour_info.xml
+++ b/app/src/main/res/layout/header_for_list_view_stop_point_tour_info.xml
@@ -50,6 +50,8 @@
                         android:paddingLeft="10dp"
                         android:paddingTop="3dp"
                         android:text="Tour Name"
+                        android:maxLines="10"
+                        android:ellipsize="end"
                         android:textSize="20sp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -96,7 +98,7 @@
             </LinearLayout>
 
             <ImageButton
-                android:id="@+id/btn_clone_tour"
+                android:id="@+id/btn_edit_user_tour"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginRight="10dp"
@@ -104,8 +106,9 @@
                 android:background="#fff"
                 android:paddingLeft="10dp"
                 android:paddingTop="10dp"
+                android:visibility="gone"
                 android:scaleType="fitXY"
-                app:srcCompat="@drawable/ic_clone_regular" />
+                app:srcCompat="@drawable/ic_edit_regular" />
 
         </LinearLayout>
 
