--- a/app/src/main/res/layout/listview_usertrip_item.xml
+++ b/app/src/main/res/layout/listview_usertrip_item.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/layout_to_hide"
     android:background="#fff"
     android:orientation="vertical"
     android:paddingLeft="20dp"
@@ -60,6 +65,8 @@
                         android:paddingLeft="10dp"
                         android:paddingTop="3dp"
                         android:text="Tour Name"
+                        android:maxLines="5"
+                        android:ellipsize="end"
                         android:textSize="20sp" />
                 </LinearLayout>
 
@@ -233,3 +240,4 @@
     </LinearLayout>
 
 </LinearLayout>
+</FrameLayout>
